update libraries and reservations getters
